--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">Food Culture</string>
+    <string name="app_name">Food BuZZ</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_log_out">Log Out</string>
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
