--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,21 @@
         completions."
     </string>
     <string name="str_home">Home</string>
+    <string name="str_offers">Offers</string>
+    <string name="str_restaurant">Restaurants</string>
+    <string name="str_share">Share with…</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="next">next</string>
+    <string name="orders_fragment">This is orders fragment</string>
+    <string name="nav_orders">Orders</string>
+    <string name="str_null">NuLL</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="str_about">About</string>
+    <string name="str_settings">Settings</string>
+    <string name="str_review">Reviews</string>
+    <string name="str_profile">Profile</string>
+    <string name="str_full_name">Full Name</string>
+    <string name="str_your_info">Your info</string>
 </resources>
