--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="str_profile">Profile</string>
     <string name="str_full_name">Full Name</string>
     <string name="str_your_info">Your info</string>
+    <string name="str_demo">demo1</string>
 </resources>
